syntax = "proto3";

package router;

option go_package = "./proto/router;router";

service Router {
	//对外提供添加服务
	rpc AddRouter(RouterInfo) returns (Response) {}
	rpc DeleteRouter(RouterId) returns (Response) {}
	rpc UpdateRouter(RouterInfo) returns (Response) {}
	rpc FindRouterByID(RouterId) returns (RouterInfo) {}
	rpc FindAllRouter(FindAll) returns (AllRouter) {}
}
message RouterInfo {
	int64 id = 1;
	string router_name = 2;
	string router_namespace = 3;
	string router_host = 4;
	repeated RouterPath router_path = 5;
}

message RouterPath{
	int64 id = 1;
	int64 router_id = 2;
	string router_path_name = 3;
	string router_backend_service = 4;
	int32 router_backend_service_port = 5;
}

message RouterId {
	int64 id = 1;
}

message FindAll {

}

message Response {
	string msg =1 ;
}

message AllRouter {
	repeated RouterInfo router_info = 1;
}


